modified logo, about in landing, added live chat, fix Ui errors

--- a/project-detail-2.html
+++ b/project-detail-2.html
@@ -51,9 +51,9 @@
                             <div class="header__content">
                                 <div class="logo">
                                     <a href="#">
-                                        <img src="images/icon/logo-black.png" alt="Tatee" />
+                                        <img src="images/icon/logo-blacka.png" alt="Tatee" />
                                     </a>
-                                    <strong style="color: #000000;">LasVegas Concord Service </strong>
+                                    <strong style="color: #000000; font-size: large;">LasVegas Concord Service </strong>
                                 </div>
                                 <div class="header__content-right">
                                     <nav class="header-nav-menu">
@@ -365,6 +365,17 @@
 
     <!-- Main JS-->
     <script src="js/global.js"></script>
+    <script type="text/javascript">
+        function add_chatinline() {
+            var hccid = 97819133;
+            var nt = document.createElement("script");
+            nt.async = true;
+            nt.src = "https://mylivechat.com/chatinline.aspx?hccid=" + hccid;
+            var ct = document.getElementsByTagName("script")[0];
+            ct.parentNode.insertBefore(nt, ct);
+        }
+        add_chatinline();
+    </script>
 
 </body>
 
