--- a/home-main.html
+++ b/home-main.html
@@ -54,9 +54,9 @@
                             <div class="header__content">
                                 <div class="logo">
                                     <a href="#">
-                                        <img src="images/icon/logo-black.png" alt="Tatee" />
+                                        <img src="images/icon/logo-blacka.png" alt="Tatee" />
                                     </a>
-                                    <strong style="color: #000000;">LasVegas Concord Service </strong>
+                                    <strong style="color: #000000; font-size: large;">LasVegas Concord Service </strong>
                                 </div>
                                 <div class="header__content-right">
                                     <nav class="header-nav-menu">
@@ -551,7 +551,7 @@
                             </div>
                             <div class="col-lg-5">
                                 <div class="media__img js-line">
-                                    <img src="images/about1.jpg" alt="About">
+                                    <img src="images/about1.png" alt="About">
                                     <span class="line"></span>
                                     <span class="line line-bottom"></span>
                                     <div class="media__img-inner wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.2s">
@@ -746,6 +746,17 @@
 
     <!-- Main JS-->
     <script src="js/global.js"></script>
+    <script type="text/javascript">
+        function add_chatinline() {
+            var hccid = 97819133;
+            var nt = document.createElement("script");
+            nt.async = true;
+            nt.src = "https://mylivechat.com/chatinline.aspx?hccid=" + hccid;
+            var ct = document.getElementsByTagName("script")[0];
+            ct.parentNode.insertBefore(nt, ct);
+        }
+        add_chatinline();
+    </script>
 
 </body>
 
